apps/homelable/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homelable
  labels:
    pod-security.kubernetes.io/enforce: privileged
