apps/homelable/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: homelable-backend
spec:
  selector:
    app: homelable-backend
  ports:
    - name: http
      port: 8000
      targetPort: http
