apps/homelable/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: homelable
  labels:
    app: homelable-frontend
spec:
  selector:
    app: homelable-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
